[package]
name = "kvs"
version = "0.1.0"
authors = ["luditing <luditing@gmail.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "2.32.0" # version 4 does not have clap::App
clap = { version = "4.4.18", features = ["derive"]}

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"